--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MusTus</string>
+    <string name="app_name">MuzTus</string>
     <string name="helloFriend">Рады приветствовать Вас в МузТус!</string>
     <string name="OK">ОК</string>
     <string name="firstHelp">Вы ведущий церемонии награждения престижной музыкальной премии. Рядом с вами на сцене стоят номинанты. \nСвет софитов бьет вам в глаза, не давая различить их лиц, а свою речь вы, как назло, забыли дома. \nКто же получит награду? Зал затаил дыхание…</string>
