music and shop left

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="showSongName">Вы уверены, что хотите использовать подсказку «Название песни и альбома» (350 монет)?</string>
     <string name="showAnswerHelp">Вы уверены, что хотите использовать подсказку «Показать ответ» (500 монет)?</string>
 
+    <string name="tutorialRecomendation">Похоже это твой первый визит в игру МузТус! Рекомендуем сперва пройти небольшое обучение, чтобы разобраться что к чему. К тому же, если пройдешь обучение, получишь небольшой приятный стартовый бонус.</string>
+    <string name="requrementsForNextPremia">К сожалению на данный момент премия закрыта. Для ее открытия необходимо пройти предыдущую премию как минимум на 80%.</string>
+
 </resources>
